changed theme name

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: Arcade Basic
+Theme Name: Vote Tom
 Theme URI: https://themes.bavotasan.com/2014/arcade/
 Author: c.bavota
 Author URI: http://bavotasan.com/
